# foobartest

./: pyproject.toml
src/: hello_world.py
tests/: test_helloworld.py
