[project]
name = "foo"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "", email = ""},
]
dependencies = [
    "pytest>=8.3.3",
    "pytest-cov>=6.0.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
cov = {shell = "pdm run pytest --cov=src tests"}
